Edited wiki page DriverInitialization through web user interface.

--- a/wiki/DriverInitialization.wiki
+++ b/wiki/DriverInitialization.wiki
@@ -14,3 +14,7 @@ This page will explain, how to initialize the driver. This means :
 = Details =
 
 Initialization of the driver is done by this block of code :
+
+= See also =
+  * [Home],
+  * [Installation],
