--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -19,7 +19,7 @@ Main features are :
 
 = Quick index =
   * [Installation],
-  * [DriverInitialization] (connection pooling, safe mode),
+  * [WikiSyntax Driver Initialization] (connection pooling, safe mode),
   * [Collection manipulation] (create, drop),
   * [Running commands],
   * [CRUD] (Create, Retrieve, Update, Delete),
