Edited wiki page DriverInitialization through web user interface.

--- a/wiki/DriverInitialization.wiki
+++ b/wiki/DriverInitialization.wiki
@@ -173,3 +173,5 @@ protected function onLastErrorCallback(response:MongoDocumentResponse):void {
 = See also =
   * [Home],
   * [Installation],
+
+<g:plusone size="medium"></g:plusone>
