Edited wiki page CollectionManipulation through web user interface.

--- a/wiki/CollectionManipulation.wiki
+++ b/wiki/CollectionManipulation.wiki
@@ -28,5 +28,7 @@ private function onResponseReady (response:MongoDocumentResponse):void {
 = See also =
 
   * [Home]
+  * [RunningCommand Running commands],
+  * [CRUD] (Create, Retrieve, Update, Delete),
 
 <g:plusone size="medium"></g:plusone>
