--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,4 +1,5 @@
 #summary Introduction to the JMCNet Full MongoDB Flex Driver.
+#labels Featured,Phase-Implementation
 
 <wiki:toc max_depth="1" />
 
