--- a/wiki/DriverInitialization.wiki
+++ b/wiki/DriverInitialization.wiki
@@ -37,8 +37,8 @@ The parameters are the following :
   * *hostname*(1) (String) : the MongoDB server's hostname,
   * *port* (uint) : the MongoDB server's port. Default value is 27017,
   * *databaseName*(1) (String) : the database's name this driver is dedicated to,
-  * *socketPoolMin* (uint) : the min number of connection in the pool. Default value is 10,
-  * *socketPoolMax* (uint) : the max number of connection in the pool. Default value is 50,
+  * *socketPoolMin* (uint) : the min number of connection in the pool. Default value is 2,
+  * *socketPoolMax* (uint) : the max number of connection in the pool. Default value is 5,
   * *socketTimeOutMs* (uint) : the socket timeout in milliseconds. Default value is 10 seconds,
   * *username* (String) : username used for authentication. If null, driver is in non authenticate mode. Default value is null,
   * *password* (String) : password of the user for authentication. This password must be non encrypted. Default value is null,
@@ -56,8 +56,8 @@ Full initialization :
 				hostname="myserverhostname"
 				port="27080"
 				databaseName="mydatabase"
-				socketPoolMin="10"
-				socketPoolMax="20"
+				socketPoolMin="5"
+				socketPoolMax="10"
 				socketTimeOutMs="60000"
 				username="myuser"
 				password="mypassword"
@@ -149,6 +149,10 @@ In safe mode, the driver always send the _getLastError_ command in the *same soc
 If you want to sequentially call the server, you MUST use callback method and send the 2nd command when callback is called.
 
 A socket is released in the pool when the answer is received (for command with answer). So there is no risk of mixing answers of different command.
+
+When the pool is empty (all socket are in use), the command you're trying to send is put in a Fifo Stack to wait for a free avalaible socket in pool. This adds delay in command but limits the number of server ressources used. So, be careful to size the pool considering the performances of your application (more sockets, give more performances) and the server resources used (more sockets, uses more server resources).
+
+The pool always try to optimize the number of open sockets. Normally the number of open sockets is always equals to *socketPoolMin* value. The number of open socket can grow until *socketPoolMax* value is reach if needed by the application. Supplementary opens socket are closed automatically when not used for a while (1 minute).
 
 Example :
 {{{
